--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -1,21 +1,22 @@
-- name: Install MySql server
+- name: Install MySQL Server
   ansible.builtin.dnf:
     name: mysql-server
     state: latest
 
-- name: start and enable MySql server
+- name: Start and Enable MySQL server
   ansible.builtin.service:
     name: mysqld
     state: started
     enabled: yes
 
-- name: install python sql dependencies
+- name: install python mysql dependencies
   ansible.builtin.pip:
     name:
       - PyMySQL
-      - cryptogrpahy
-    executable: pip3.9
+      - cryptography
+    executable: pip3.9 # pip3.11 if python version is 3.11
 
+# check password is already setup or not
 - name: check DB connection
   community.mysql.mysql_info:
     login_user: root
@@ -27,8 +28,8 @@
 
 - name: print output
   ansible.builtin.debug:
-    msg: "Output: {{ mysql_connection_output }}"
+    msg: "Output: {{mysql_connection_output}} "
 
 - name: setup root password
   ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
-  when: mysql_connection_output.failed is true
+  when: mysql_connection_output.failed is true # don't give {{ }} in when condition
