--- a/inventory.ini
+++ b/inventory.ini
@@ -8,4 +8,5 @@ backend.devops91.cloud
 frontend.devops91.cloud
 
 [all:vars]
-anisble_password=DevOps321
+ansible_user=ec2-user
+ansible_password=DevOps321
