--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -21,7 +21,12 @@
     path: /app
     state: directory
 
-- name: donwload backend code
+- name: download backend code
+  ansible.builtin.get_url:
+    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+    dest: /tmp/backend.zip
+
+- name: unzip backend code
   ansible.builtin.unarchive:
     src: /tmp/backend.zip # by default checks in ansible server
     dest: /app
